--- a/chCoreTest/CMakeLists.txt
+++ b/chCoreTest/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
 
 target_link_libraries(
-  chCoreTest dl
+  chCoreTest
   chCore
   chUtilities
 )
