--- a/chUtilitiesTest/CMakeLists.txt
+++ b/chUtilitiesTest/CMakeLists.txt
@@ -1,9 +1,7 @@
-include(FetchContent)
-
-# No se necesita FetchContent para Catch2 si estás usando un único archivo header
-
 # Define el ejecutable para las pruebas
 add_executable(chUtilitiesTest chUtilitiesMain.cpp chBitmapTest.cpp)
+
+find_package(TBB REQUIRED COMPONENTS tbb)
 
 # Añade el include directory para Catch2 (mismo directorio que chUtilitiesMain.cpp)
 target_include_directories(chUtilitiesTest PRIVATE ${CMAKE_SOURCE_DIR})
@@ -12,6 +10,7 @@ target_include_directories(chUtilitiesTest PRIVATE ${CMAKE_SOURCE_DIR})
 target_link_libraries(
   chUtilitiesTest
   chUtilities
+  tbb
 )
 
 # Macro para incluir subcarpetas
