Window creation using CrossWindow donde!

--- a/chCore/CMakeLists.txt
+++ b/chCore/CMakeLists.txt
@@ -3,10 +3,16 @@ file(GLOB
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp 
      ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/*/*.cpp 
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.h
-     ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/*/*.h 
-)
+     ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/*/*.h
+     ${CMAKE_CURRENT_SOURCE_DIR}/externals/*/*.cpp
 
+)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+add_subdirectory(externals/crosswindow)
 add_library(chCore SHARED ${SOURCE_FILES})
+
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
+
 set_target_properties(chCore PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     OUTPUT_NAME "chCore"
     PREFIX "")
@@ -20,7 +26,7 @@ macro(INCLUDESUBFOLDERS curdir)
     endforeach()
 endmacro()
 
-add_compile_definitions(CH_CORE_EXPORTS)
+add_compile_definitions(CH_CORE_EXPORTS CH_CROSS_WINDOW)
 
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src)
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem)
@@ -28,43 +34,57 @@ INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src)
 
 target_include_directories(chCore PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/GPUResources
+    ${CMAKE_CURRENT_SOURCE_DIR}/externals/crosswindow/src
 )
 
-if(WIN32)
-    file(GLOB_RECURSE WIN32FILES 
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.h
-    )
-    target_sources(chCore PRIVATE ${WIN32FILES})
 
-    target_include_directories(chCore PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src/Platform/Win32
-    )
+file(GLOB_RECURSE CROSSWIN_FILES 
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/CrossWindow/*.cpp
+)
+target_sources(chCore PRIVATE ${CROSSWIN_FILES})
 
-    target_link_libraries(chCore chUtilities)
-elseif(APPLE)
-    # Perform macOS-specific actions
-elseif(UNIX)
+target_link_libraries(chCore chUtilities CrossWindow)
 
-    find_package(SDL3 REQUIRED)
+target_include_directories(chCore PRIVATE
+  ${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src/Platform/SDL
+  ${CMAKE_CURRENT_SOURCE_DIR}/externals/crosswindow/src
+  ${CMAKE_CURRENT_SOURCE_DIR}/Platform/CrossWindow
+)
 
-    file(GLOB_RECURSE WAYLANDFILES 
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.h
-    )
-    target_sources(chCore PRIVATE ${WAYLANDFILES})
+target_link_libraries(chCore chUtilities CrossWindow)
 
-    target_include_directories(chCore PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src/Platform/SDL
-    )
 
-    target_link_libraries(chCore chUtilities SDL3::SDL3)
 
-else()
-    message(FATAL_ERROR "Unsupported operating system: ${CMAKE_SYSTEM_NAME}")
-endif()
+##########################################################################
+# if(WIN32)
+#     file(GLOB_RECURSE WIN32FILES 
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.cpp
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.h
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.cpp
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Win32/*.h
+#     )
+#     target_sources(chCore PRIVATE ${WIN32FILES})
 
+#     target_include_directories(chCore PRIVATE
+#         ${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src/Platform/Win32
+#     )
+
+#     target_link_libraries(chCore chUtilities)
+# elseif(APPLE)
+#     # Perform macOS-specific actions
+# elseif(UNIX)
+
+#     find_package(SDL3 REQUIRED)
+
+#     file(GLOB_RECURSE WAYLANDFILES 
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.cpp
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.h
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.cpp
+#         ${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/SDL/*.h
+#     )
+#     target_sources(chCore PRIVATE ${WAYLANDFILES})
+
+#     target_include_directories(chCore PRIVATE
+#         ${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src/Platform/SDL
+#     )
+##########################################################################
