Vulkan initialization working as expected.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,22 +28,8 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/chCoreTest")
   add_subdirectory(chCoreTest)
 endif()
 
-if(EXISTS "${CMAKE_SOURCE_DIR}/GraphicModules/chDX12Graphics")
-  if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    message("Directory exists and running on Windows.")
-    add_subdirectory(GraphicModules/chDX12Graphics)
-  elseif(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    message("Running on Linux. Directory not added.")
-  endif()
-endif()
-
-if(EXISTS "${CMAKE_SOURCE_DIR}/GraphicModules/chVulkanGraphics")
-  if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    message("Directory exists and running on Linux.")
-    add_subdirectory(GraphicModules/chVulkanGraphics)
-  elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    message("Running on Windows. Directory not added.")
-  endif()
+if(EXISTS "${CMAKE_SOURCE_DIR}/GraphicsAPIs/chVulkan")
+  add_subdirectory(GraphicsAPIs/chVulkan)
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
