--- a/chCore/CMakeLists.txt
+++ b/chCore/CMakeLists.txt
@@ -1,18 +1,20 @@
 file(GLOB 
      SOURCE_FILES  
-     ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp 
-     ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/*/*.cpp 
      ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.h
-     ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/*/*.h
-     ${CMAKE_CURRENT_SOURCE_DIR}/externals/*/*.cpp
+     ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp 
+     ${CMAKE_CURRENT_SOURCE_DIR}/src/Graphics/*.cpp 
+     ${CMAKE_CURRENT_SOURCE_DIR}/src/Graphics/*.h
      ${CMAKE_CURRENT_SOURCE_DIR}/externals/crosswindow/*.h
+     ${CMAKE_CURRENT_SOURCE_DIR}/externals/*/*.cpp
 
 )
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-add_subdirectory(externals/crosswindow)
-add_library(chCore SHARED ${SOURCE_FILES})
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
+
+add_subdirectory(externals/crosswindow)
+
+add_library(chCore SHARED ${SOURCE_FILES})
 
 set_target_properties(chCore PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     OUTPUT_NAME "chCore"
@@ -30,11 +32,10 @@ endmacro()
 add_compile_definitions(CH_CORE_EXPORTS CH_CROSS_WINDOW)
 
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src)
-INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem)
+INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/src/Graphics)
 INCLUDESUBFOLDERS(${CMAKE_CURRENT_SOURCE_DIR}/../chUtilities/src)
 
 target_include_directories(chCore PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/GraphicsSystem/GPUResources
     ${CMAKE_CURRENT_SOURCE_DIR}/externals/crosswindow/src
 )
 
