--- a/chCore/CMakeLists.txt
+++ b/chCore/CMakeLists.txt
@@ -9,6 +9,7 @@ file(GLOB
 
 )
 
+set(CMAKE_DEBUG_POSTFIX "d")
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic")
 
