--- a/chUtilities/CMakeLists.txt
+++ b/chUtilities/CMakeLists.txt
@@ -1,5 +1,6 @@
 file(GLOB SOURCE_FILES  ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*/*.h)
 
+set(CMAKE_DEBUG_POSTFIX "d")
 add_library(chUtilities SHARED ${SOURCE_FILES})
 set_target_properties(chUtilities PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
   OUTPUT_NAME "chUtilities"
