--- a/chCoreTest/CMakeLists.txt
+++ b/chCoreTest/CMakeLists.txt
@@ -28,3 +28,9 @@ endmacro()
 
 INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chUtilities/src)
 INCLUDESUBFOLDERS(${CMAKE_SOURCE_DIR}/chCore/src)
+
+set_target_properties(chCoreTest PROPERTIES
+    INSTALL_RPATH "$ORIGIN/../lib"
+    BUILD_WITH_INSTALL_RPATH TRUE
+    INSTALL_RPATH_USE_LINK_PATH TRUE
+)
