Editor created. App running from editor, loads rome models and shows them ok. Resize seems to be working well.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/chCore")
   add_subdirectory(chCore)
 endif()
 
-if(EXISTS "${CMAKE_SOURCE_DIR}/chCoreTest")
+if(EXISTS "${CMAKE_SOURCE_DIR}/chEditor")
   message("Directory exists.")
-  add_subdirectory(chCoreTest)
+  add_subdirectory(chEditor)
 endif()
 
 if(EXISTS "${CMAKE_SOURCE_DIR}/GraphicsAPIs/chVulkan")
