--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,49 @@ else()
   add_compile_options(-Wall -Wextra -pedantic -Werror)
 endif()
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
+# Configuración específica para Linux
+if(UNIX AND NOT APPLE)
+  # Configuración global del compilador
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+
+  # Configuración de linker
+  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fPIC")
+  set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -fPIC")
+
+  # Configuración para ejecutables con plugins
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -rdynamic -Wl,--export-dynamic")
+
+  message(STATUS "PIE configuration enabled for Chimera Engine plugins")
+endif()
+
+# Configuración específica para C++20 en todo el proyecto
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Configuración de build type si no está especificado
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+# Optimizaciones de compilador
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
+  if(UNIX AND NOT APPLE)
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -flto")
+  endif()
+endif()
+
+# Configuración de warnings
+if(UNIX AND NOT APPLE)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
+elseif(WIN32)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+endif()
+
 add_subdirectory(chUtilities)
 
 ##Ad if exist depending on the stream
