--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "chCore/externals/assimp"]
 	path = chCore/externals/assimp
 	url = https://github.com/assimp/assimp.git
-[submodule "chEditor/externals/imgui"]
-	path = chEditor/externals/imgui
-	url = https://github.com/ocornut/imgui.git
 [submodule "chCore/externals/SDL3"]
 	path = chCore/externals/SDL3
 	url = https://github.com/libsdl-org/SDL.git
+[submodule "Externals/imgui"]
+	path = Externals/imgui
+	url = https://github.com/ocornut/imgui.git
